Added lobster font and some styling

--- a/stylesheets/global.sass
+++ b/stylesheets/global.sass
@@ -1,7 +1,29 @@
+$red: #E41B17
+$grey: #bdc3c7
+
 body
   background-color: #f8f8f8
   color: #333
   font-family: 'Roboto'
+  text-align: center
+h1
+  font-family: 'Lobster'
+  color: $red
 ul
   list-style-type: none
   padding-left: 0
+  width: 80%
+  margin: auto
+  margin-bottom: 16px
+ul.completed li
+  text-decoration: line-through
+  color: $grey
+li
+  text-align: left
+  height: 34px
+  line-height: 34px
+  font-size: 1.4em
+#container
+  width: 320px
+  margin: auto
+  margin-top: 50px
