Fixed issue with buttons

--- a/stylesheets/fa.sass
+++ b/stylesheets/fa.sass
@@ -1,7 +1,8 @@
 .fa
   line-height: 34px
 .fa-check
-  padding-right: 16px
+  padding-right: 24px
   color: #54C571
 .fa-times
-  padding-right: 16px
+  padding-right: 24px
+  color: #bdc3c7
