--- a/stylesheets/global.sass
+++ b/stylesheets/global.sass
@@ -23,7 +23,15 @@ li
   height: 34px
   line-height: 34px
   font-size: 1.4em
+  margin-bottom: 16px
 #container
   width: 320px
   margin: auto
   margin-top: 50px
+button
+  background: none
+  border: none
+  height: inherit
+  font-size: inherit
+button:focus
+  outline: 0
