--- a/stylesheets/global.sass
+++ b/stylesheets/global.sass
@@ -6,13 +6,13 @@ body
   color: #333
   font-family: 'Roboto'
   text-align: center
-h1
+h1, h2
   font-family: 'Lobster'
   color: $red
+  text-decoration: underline
 ul
   list-style-type: none
   padding-left: 0
-  width: 80%
   margin: auto
   margin-bottom: 16px
 ul.completed li
@@ -33,5 +33,16 @@ button
   border: none
   height: inherit
   font-size: inherit
-button:focus
+button:focus, input:focus
   outline: 0
+input
+  background: none
+  border: none
+  border-bottom: 1px solid #333
+  width: 100%
+  height: 24px
+  margin-bottom: 16px
+  font-size: 1.4em;
+  font-family: 'Roboto'
+input:focus
+  border-bottom: 2px solid #333
