--- a/stylesheets/global.sass
+++ b/stylesheets/global.sass
@@ -1,48 +1,29 @@
-$red: #E41B17
-$grey: #bdc3c7
+@import "config/colors"
 
 body
   background-color: #f8f8f8
-  color: #333
+  color: $darkgrey
   font-family: 'Roboto'
   text-align: center
+
 h1, h2
   font-family: 'Lobster'
   color: $red
   text-decoration: underline
-ul
-  list-style-type: none
-  padding-left: 0
-  margin: auto
-  margin-bottom: 16px
-ul.completed li
-  text-decoration: line-through
-  color: $grey
-li
-  text-align: left
-  height: 34px
-  line-height: 34px
-  font-size: 1.4em
-  margin-bottom: 16px
-#container
-  width: 320px
-  margin: auto
-  margin-top: 50px
+
 button
   background: none
   border: none
   height: inherit
   font-size: inherit
+
 button:focus, input:focus
   outline: 0
-input
-  background: none
-  border: none
-  border-bottom: 1px solid #333
-  width: 100%
-  height: 24px
-  margin-bottom: 16px
-  font-size: 1.4em;
-  font-family: 'Roboto'
-input:focus
-  border-bottom: 2px solid #333
+
+#container
+  width: 320px
+  margin: auto
+  margin-top: 50px
+
+.fa
+  line-height: 34px
