Added support for multi-line tasks

--- a/stylesheets/global.sass
+++ b/stylesheets/global.sass
@@ -9,7 +9,7 @@ body
 h1, h2
   font-family: 'Lobster'
   color: $red
-  text-decoration: underline
+  border-bottom: 2px solid $red
 
 button
   background: none
