--- a/stylesheets/todolist.sass
+++ b/stylesheets/todolist.sass
@@ -8,10 +8,14 @@ ul
 
 li
   text-align: left
-  height: 34px
+  min-height: 34px
   line-height: 34px
   font-size: 1.4em
   margin-bottom: 16px
+  display: flex
+
+li span
+  max-width: 272px
 
 .fa-check
   padding-right: 24px
